--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
-  "name": "auto-suggest-input",
-  "version": "1.0.0",
-  "description": "Input field which suggests option from the data provided",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/prathameshpalyekar/AutoSuggestInput.git"
-  },
-  "author": "prathamesh palyekar",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/prathameshpalyekar/AutoSuggestInput/issues"
-  },
-  "homepage": "https://github.com/prathameshpalyekar/AutoSuggestInput#readme"
+    "name": "react-auto-suggest-input",
+    "version": "1.0.0",
+    "description": "React Input field which suggests option from the data provided",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack --watch",
+        "build": "webpack"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/prathameshpalyekar/AutoSuggestInput.git"
+    },
+    "author": "prathamesh palyekar",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/prathameshpalyekar/AutoSuggestInput/issues"
+    },
+    "homepage": "https://github.com/prathameshpalyekar/AutoSuggestInput#readme",
+    "dependencies": {
+        "react": "^16.4.1"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.4",
+        "babel-plugin-transform-react-jsx": "^6.24.1",
+        "babel-preset-env": "^1.7.0",
+        "webpack": "^4.12.1",
+        "webpack-command": "^0.2.1"
+    },
+    "peerDependencies": {
+        "react": "^16.4.1"
+    }
 }
