--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-auto-suggest-input",
-    "version": "1.0.0",
+    "version": "1.0.4",
     "description": "React Input field which suggests option from the data provided",
     "main": "index.js",
     "scripts": {
@@ -19,7 +19,8 @@
     },
     "homepage": "https://github.com/prathameshpalyekar/AutoSuggestInput#readme",
     "dependencies": {
-        "react": "^16.4.1"
+        "react": "^15.0.1",
+        "react-dom": "^15.0.1"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
@@ -31,6 +32,7 @@
         "webpack-command": "^0.2.1"
     },
     "peerDependencies": {
-        "react": "^16.4.1"
+        "react": "^15.0.1",
+        "react-dom": "^15.0.1"
     }
 }
